--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,33 @@
 version: '3.5'
 services:
   peercoind:
-    build: ./peercoind
-    restart: always
+    image: peercoin/peercoind
+    restart: on-failure:20
     ports:
-      "19904:19904"
+     - "9901:9904"
     environment:
-       - RPC_USER=pothos
-       - RPC_PASSWORD=pothos
+       - RPC_USER=peercoind
+       - RPC_PASSWORD=peercoindrpc
+       - TESTNET=1
+       - TXINDEX=1
     volumes:
-      type: bind
-      source: /opt/go-perassets/peercoin/
-      target: /data
+      - type: bind
+        source: /opt/peercoin/
+        target: /data
     command:
-       - testnet=1
-       - rpc_user=pothos
-       - rpc_password=pothos
-       - txindex=1
-       - nominting
-       - rpcallowip=*
-       - rpcport=9904
-       - walletnotify='/usr/local/bin/transaction.sh %s'
+      -nominting
+      -rpcallowip=0.0.0.0/0
+      -testnet
+      -txindex
   go-peerassets:
     restart: always
     build: .
     ports:
-      "8089:8089"
+      - "8089:8089"
     depends_on:
       - peercoind
     environment:
-     - RPC_HOST=peercoind
-     - RPC_PORT=9904
-     - RPC_USERNAME=pothos
-     - RPC_PASSWORD=pothos
+      - RPC_HOST=peercoind
+      - RPC_PORT=9904
+      - RPC_USERNAME=peercoind
+      - RPC_PASSWORD=peercoindrpc
